# kirami-plugin-qweather

./: README.md  pyproject.toml
.github/workflows/: release.yml
kirami-plugin-qweather/: __init__.py
